src/test/ui/generic-associated-types/gat-trait-path-missing-lifetime.stderr
error[E0107]: missing generics for associated type `X::Y`
  --> $DIR/gat-trait-path-missing-lifetime.rs:8:20
   |
LL |   fn foo<'a, T1: X<Y = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-missing-lifetime.rs:2:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL |   fn foo<'a, T1: X<Y<'a> = T1>>(t : T1) -> T1::Y<'a> {
   |                    ~~~~~

error[E0107]: missing generics for associated type `X::Y`
  --> $DIR/gat-trait-path-missing-lifetime.rs:8:20
   |
LL |   fn foo<'a, T1: X<Y = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-missing-lifetime.rs:2:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL |   fn foo<'a, T1: X<Y<'a> = T1>>(t : T1) -> T1::Y<'a> {
   |                    ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
